[package]
name = "pcap2socks"
version = "0.4.0-alpha"
authors = ["Xie Zhihao <xzh1206@gmail.com>"]
edition = "2018"
description = "Redirect traffic to SOCKS proxy with pcap."
readme = "README.md"
repository = "https://github.com/zhxie/pcap2socks"
license = "MIT"
keywords = ["proxy", "pcap", "socks"]
categories = ["command-line-utilities", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-socks5 = "0.3.1"
clap = "2.33.1"
env_logger = "0.7.1"
ipnetwork = "0.16.0"
log = "0.4.8"
lru = "0.5.2"
pnet = "0.26.0"
rand = "0.7.3"
structopt = "0.3.15"
tokio = { version = "0.2.21", features = ["macros", "rt-core", "rt-threaded", "tcp", "time", "udp"] }
