[package]
name = "pcap2socks"
version = "0.6.1"
authors = ["Xie Zhihao <xzh1206@gmail.com>"]
edition = "2018"
description = "Redirect traffic to SOCKS proxy with pcap."
readme = "README.md"
repository = "https://github.com/zhxie/pcap2socks"
license = "MIT"
keywords = ["proxy", "pcap", "socks"]
categories = ["command-line-utilities", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-socks5 = "0.3.2"
clap = "2.33.1"
dns-lookup = "1.0.5"
env_logger = "0.8.2"
ipnetwork = "0.17.0"
log = "0.4.11"
lru = "0.6.3"
pnet = "0.27.2"
rand = "0.8.1"
structopt = "0.3.21"
tokio = { version = "0.2.24", features = ["macros", "rt-core", "rt-threaded", "sync", "tcp", "time", "udp"] }

[target.'cfg(windows)'.dependencies]
netifs = { git = "https://github.com/zhxie/netifs-rs" }

[target.'cfg(not(windows))'.dependencies]
interfaces = "0.0.4"
